--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Virtual IP Router for NodeJs and Javascript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Fluturenet/vRouter/issues"
   },
-  "homepage": "https://github.com/Fluturenet/vRouter#readme"
+  "homepage": "https://github.com/Fluturenet/vRouter#readme",
+  "dependencies": {
+    "ip": "^1.1.5"
+  }
 }
